--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div class="feed" onscroll="projecgt__div__scroll()">
 
 
-            <div class="home" id="homeparent" style="background: black;">
+            <div class="home" id="homeparent" >
                 <!-- <div style="background-image: url(ZSTTK308-removebg-preview.png);" class="profileDiv"></div> -->
                 <div class="name__role">
-                    <p>I'm</p>
-                    <h1 style="color:black">Mathavan</h1>
+                    <p> Hello,I'm</p>
+                    <h1 >Mathavan</h1>
                     <p>Front-End Developer</p>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                    </div>
 
                    <div class="Details">
-                    <img src="game.gif">
+                    <img src="ZSTTK308-removebg-preview.png">
                     <div class="text__details">
                         <h1>Front-End Developer</h1>
                         <p>Hi,I am Mathavan.I am from zoho schools of technology,Tenkasi.
