--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Great+Vibes&family=Lato:wght@100&family=Lobster&family=Neonderthaw&family=Noto+Sans+Khmer:wght@600&family=Noto+Sans+Symbols+2&family=Orbitron&family=Outfit&family=Pacifico&family=Poppins&family=Rajdhani:wght@300&family=Roboto+Mono:wght@500&family=Roboto:ital@1&family=Shantell+Sans:wght@300&family=Ubuntu:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Great+Vibes&family=Josefin+Sans&family=Lato:wght@100&family=Lobster&family=Neonderthaw&family=Noto+Sans+Khmer:wght@600&family=Noto+Sans+Symbols+2&family=Orbitron&family=Outfit&family=Pacifico&family=Poppins&family=Rajdhani:wght@300&family=Roboto+Mono:wght@500&family=Roboto:ital@1&family=Shantell+Sans:wght@300&family=Ubuntu:wght@300&display=swap');
       </style>
     <title>Portfolio</title>
 </head>
@@ -48,8 +48,8 @@
                     <img src="ZSTTK308-removebg-preview.png">
                     <div class="text__details">
                         <h1>Front-End Developer</h1>
-                        <p>Hi,I am Mathavan.I am from zoho schools of technology,Tenkasi.
-                            I was born and brought up in Surandai and I still live here.My dad is a Farmer,My mom is a Beedi Worker and I have one sister. </p>
+                        <p>I’m a junior front-end developer looking for a new role in an exciting team. I focus on writing accessible HTML,  CSS practices and writing clean JavaScript. When writing JavaScript code, I mostly use Ejs and Node JS, but I can adapt to whatever tools are required.
+                            </p>
                             <div class="details__bottom">
                                 <div class="email__div"> <span>Mail :</span> <p> mathavan.c@zohocorp.com</p></div>
                                 <div class="email__div"> <span>ZSID :</span> <p> ZSTTK308</p></div>
