--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <span>NODE JS</span>
                         <span>MYSQL</span>
                     </div>
-                    <a href="https://github.com/mathav18/product-feedback-app.git" target="_blank"><button >View Project</button></a>
+                    <a href="https://github.com/mathav18/product-feedback-app.git" target="_blank"><button >View Code</button></a>
                 </div>
             </div>
 
@@ -185,7 +185,7 @@
                         <span>JS</span>
                         
                     </div>
-                   <a href="https://github.com/mathav18/Chat-App.git" target="_blank"> <button >View Project</button></a>
+                   <a href="https://github.com/mathav18/Chat-App.git" target="_blank"> <button >View Code</button></a>
                 </div>
             </div>
 
@@ -215,7 +215,7 @@
                         <span>NODE JS</span>
                         <span>MYSQL</span>
                     </div>
-                   <a href="https://github.com/mathav18/NoteBook.git" target="_blank"><button >View Project</button></a> 
+                   <a href="https://github.com/mathav18/NoteBook.git" target="_blank"><button >View Code</button></a> 
                 </div>
             </div>
 
@@ -233,7 +233,7 @@
                         <span>NODE JS</span>
                         <span>MYSQL</span>
                     </div>
-                    <a href="https://github.com/mathav18/entertainment-web-app.git" target="_blank"><button >View Project</button></a>
+                    <a href="https://github.com/mathav18/entertainment-web-app.git" target="_blank"><button >View Code</button></a>
                 </div>
             </div>
 
@@ -260,7 +260,7 @@
                             <span>NODE JS</span>
                             <span>MYSQL</span>
                         </div>
-                       <a href="https://github.com/mathav18/Invoice-app.git" target="_blank"> <button >View Project</button></a>
+                       <a href="https://github.com/mathav18/Invoice-app.git" target="_blank"> <button >View Code</button></a>
                     </div>
                 </div>
 
