--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
         </div>
         <div class="feed" onscroll="projecgt__div__scroll()">
 
-
+<div class="empty__parent">
             <div class="home" id="homeparent" >
-                <!-- <div style="background-image: url(ZSTTK308-removebg-preview.png);" class="profileDiv"></div> -->
+             
                 <div class="name__role">
                     <p> Hello,I'm</p>
                     <h1 >Mathavan</h1>
                     <p id="animate__text">Front-End Developer</p>
                 </div>
             </div>
+        </div>
 
 
             <div class="about" id="aboutparent">
