--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                     <span onclick="projectFilter(this)" class="fil">HTML/CSS</span>
                     <span onclick="projectFilter(this)" class="fil">VANILLA JS</span>
                     <span onclick="projectFilter(this)" class="fil">API</span>
+                    <span onclick="projectFilter(this)" class="fil">JAVA</span>
                 </div>
                 <div class="divArea">
      
